Name input resizes to correctly wrap text

--- a/page.css
+++ b/page.css
@@ -95,7 +95,7 @@ header {
 
 #table th, td {
     position: relative;
-    padding: 0px 10px;
+    padding: 4px 10px;
     min-width: 20px;
 }
 
@@ -141,8 +141,18 @@ header {
     width: 100%;
 }
 
+#table td textarea {
+    all: unset;
+    width: 100%;
+    height: 31px;
+}
 input[type='number'] {
     appearance: textfield !important;
+}
+
+input[type='text'] {
+    word-wrap: break-word;
+    word-break: break-all;
 }
 
 .autocomplete_items {
